--- a/petrol-pump-ui/package.json
+++ b/petrol-pump-ui/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
+    "@nextui-org/react": "^2.6.11",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "js-file-download": "^0.4.12",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
